# motion_capture

./: CMakeLists.txt  README.md  main.cpp  main00.cpp
common/: CMakeLists.txt  main01.cpp  main02.cpp  main_demo.cpp  main_example.cpp
common/include/mocap/: data_model.h  optitrack.h  socket.h
common/include/motion_capture/: data_model.h  natnet_messages.h  optitrack.h  socket.h  udphdl.h
common/src/: CMakeLists.txt
common/src/mocap/: natnet_messages.cpp  optitrack.cpp  socket.cpp
common/src/motion_capture/: CMakeLists.txt  data_model.cpp  natnet_messages.cpp  optitrack.cpp  socket.cpp  udphdl.cpp
include/mocap/: data_model.h  natnet_messages.h  optitrack.h  socket.h
include/mocap_optitrack/: data_model.h  dsa_log.h  mocap_config.h  rigid_body_publisher.h  socket.h  version.h
include/natnet/: natnet_messages.h  natnet_packet_definition.h
src/: CMakeLists.txt  data_model.cpp  mocap_config.cpp  mocap_node.cpp  socket.cpp
src/mocap/: CMakeLists.txt  data_model.cpp  natnet_messages.cpp  optitrack.cpp  socket.cpp
src/natnet/: natnet_messages.cpp  natnet_packet_definition.cpp
